<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DigiScore</string>
    <string name="new_round_button">New round</string>
    <string name="my_rounds_button">My rounds</string>
    <string name="friends_button">Friends</string>
    <string name="action_add_friends">Add Friends</string>
    <string name="action_settings2">Settings2</string>
    <string name="title_activity_my_friends">My Friends</string>
    <string name="title_dialog_enter_date">Enter Date</string>
    <string name="title_activity_new_round">New Round</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_friend_fragment">AddFriendFragment</string>
    <string name="add_friend_name">Enter Name</string>
    <string name="add_friend_mail">Enter Mail</string>
    <string name="add_friend_HCP">Enter HCP</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading</string>
    <string name="add_valid_hcp">Enter a valid HCP</string>
    <string name="add_valid_name">Enter a name</string>
    <string name="choosen">You have chosen</string>
    <string name="chose_course">Chose course</string>
    <string name="chose_holes">Holes</string>
    <string name="nine_holes_radio">9 Holes</string>
    <string name="eighteen_holes_radio">18 Holes</string>
    <string name="number_nine">9</string>
    <string name="number_eighteen">18</string>
    <string name="chose_players">Choose players</string>
    <string name="player_one_button">P1</string>
    <string name="player_two_button">P2</string>
    <string name="player_three_button">P3</string>
    <string name="player_four_button">P4</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="player_three">Player 3</string>
    <string name="player_four">Player 4</string>
    <string name="add_user">Add user</string>
    <string name="enter_date">Enter date</string>
    <string name="title_fragment1">Tab one</string>
    <string name="title_fragment2">Tab two</string>
    <string name="title_fragment3">Tab three</string>

    <string-array name="courses_array">
        <item>Arninge</item>
        <item>Bromma</item>
        <item>Lindö-Dal</item>
        <item>Lindö-Park</item>
        <item>Lindö-Äng</item>
        <item>Troxhammar</item>
        <item>Rotebro</item>
        <item>Ulriksdal</item>
    </string-array>

    <string name="title_activity_round">RoundActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="enter_time">Enter time</string>

</resources>