<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gezelbom.digiscore2.MainActivity" >

    <Button
        android:id="@+id/newRoundButton"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="newRound"
        android:text="@string/new_round_button" />

    <Button
        android:id="@+id/friendsButton"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_below="@+id/newRoundButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="myFriends"
        android:text="@string/friends_button" />

    <Button
        android:id="@+id/myRoundsButton"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_above="@+id/newRoundButton"
        android:layout_alignLeft="@+id/newRoundButton"
        android:layout_marginBottom="25dp"
        android:onClick="myRounds"
        android:text="@string/my_rounds_button" />

</RelativeLayout>